--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -31,6 +31,7 @@ a{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    padding: 20px;
     border-bottom: 15px solid Black;
     width: 100%;
 }
@@ -38,7 +39,6 @@ a{
 .left{
     display: flex;
     align-items: center;
-    margin-left: 40px;
 }
 
 .produtos{
@@ -58,6 +58,5 @@ a{
 }
 
 .left img {
-    width: 150px;
-    margin-left: 25px;
+    margin-left: 600px
 }
